--- a/project-start/style.css
+++ b/project-start/style.css
@@ -83,8 +83,7 @@ body{
     font-size: 0.7em;
     margin:0;
 }
-@media only screen and (max-width:600px)
-{
+@media only screen and (max-width:600px){
     .main-nav{
         font-size: .5em;
         padding: 0;
@@ -105,4 +104,27 @@ color:f5f5f6;
     display:flex;
     align-items: center;
     justify-content: center;
+    height: 50vh;
+}
+.cover{
+    width: 30rem;
+}
+/* GRID*/
+
+.grid-wrapper{
+    display: grid;
+    grid-gap:20px;
+    grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+
+}
+.box > img{
+    width: 100%;
+}
+.box{
+    background-color: #434;
+    padding: 130px;
+    margin: 20px;
+}
+footer{
+    text-align: center;
 }
